@@ -34,6 +34,7 @@ Moved Panels stylizer to CTools. You must update CTools at the same time as Pane
 #743850 by foripepe: Add delete panel node permissions.
 #532900: Flexible sometimes did not update links when region settings changed.
 #723036: Node pane previews did not include node content as they should.
+#831216: It should not be possible to remove the Canvas.
 
 Panels 6.x-3.5 (2010-May-28)
 ==============
